open in new tab

--- a/popup.html
+++ b/popup.html
@@ -75,6 +75,15 @@
                     </select>
                 </div>
             </div>
+             <div class="form-row">
+                <div class="form-group">
+                    <label class="checkbox-label">
+                        <input type="checkbox" id="openInNewTab">
+                        <span class="checkmark"></span>
+                        Open in new tab
+                    </label>
+                </div>
+            </div>
 
             <div class="key-combination">
                 <h3>Key Combination</h3>
@@ -228,6 +237,7 @@
                     <div>URL</div>
                     <div>ShortKey</div>
                     <div>Domain</div>
+                    <div>Tab</div>
                     <div>Color</div>
                     <div>Actions</div>
                 </div>
